--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <version>8.0.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.3.10</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
